<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@android:color/white" >    
    <ImageView 
        android:src="@drawable/musicalinstruments"
        android:background="@color/black"
        android:id="@+id/instrumentsbackground"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:screenOrientation="portrait"
        >
    </ImageView>

    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:paddingLeft="80dp"
		    android:paddingRight="80dp"
		    android:layout_height="fill_parent"
		    android:gravity="center_vertical"
		    android:orientation="vertical"
		    android:layout_centerInParent="true"
		    >

			<Button
			    android:layout_marginBottom="3dp"
			    android:id="@+id/choosePiano"
			    style="@style/buttonText2"
			    android:text="@string/piano"
			    android:textColor="@android:color/black"
			    android:background="@color/grey"/>

			<Button
			    android:layout_marginBottom="3dp"
			    android:id="@+id/chooseGuitar"
			    style="@style/buttonText2"
			    android:text="@string/guitar" 
			    android:textColor="@android:color/black"
			    android:background="@color/grey"/>

			<Button
			    android:layout_marginBottom="3dp"
			    android:id="@+id/chooseDrums"
			    style="@style/buttonText2"
			    android:text="@string/drums" 
			    android:textColor="@android:color/black"
			    android:background="@color/grey"/>
			
			<Button
			    android:layout_marginBottom="3dp"
			    android:id="@+id/chooseMisc"
			    style="@style/buttonText2"
			    android:text="@string/misc" 
			    android:textColor="@android:color/black"
			    android:background="@color/grey"/>
	        
        </LinearLayout>
    <Button
        android:id="@+id/instrumentscancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/cancel" />

</RelativeLayout>